[package]
name = "what-time"
version = "0.1.0"
description = "What the time is it"
authors = ["FusionZhu <tianlangstudio@aliyun.com>"]
license = "MIT"
edition = "2024"

[dependencies]
chrono = "0.4.*"
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.0"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
